solve z-index issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,1 @@
 
-body {
-	background-color: wheat;
-	text-align: center;
-}
